bindings/python/rust_widgets/__init__.py


        L.rw_get_widget_geometry.argtypes = [
            c_uint64,
            POINTER(c_int),  # x_out
            POINTER(c_int),  # y_out
            POINTER(c_uint),  # width_out
            POINTER(c_uint),  # height_out
        ]
        L.rw_get_widget_geometry.restype = c_bool

        L.rw_set_widget_ime_enabled.argtypes = [c_uint64, c_bool]
        L.rw_set_widget_ime_enabled.restype = c_bool

        L.rw_is_widget_ime_enabled.argtypes = [c_uint64]
        L.rw_is_widget_ime_enabled.restype = c_bool

        L.rw_set_widget_accessibility_name.argtypes = [c_uint64, c_char_p]
        L.rw_set_widget_accessibility_name.restype = c_bool

        L.rw_get_widget_accessibility_name.argtypes = [c_uint64]
        L.rw_get_widget_accessibility_name.restype = c_char_p

        # ------------------------------------------------------------------ #
        # Menu operations                                                    #
        # ------------------------------------------------------------------ #
        L.rw_attach_menu_bar_to_window.argtypes = [c_uint64, c_uint64]
        L.rw_attach_menu_bar_to_window.restype = c_bool

        L.rw_menu_add_item.argtypes = [c_uint64, c_char_p, c_char_p]
        L.rw_menu_add_item.restype = c_uint64

        L.rw_poll_menu_triggered.argtypes = []
        L.rw_poll_menu_triggered.restype = c_uint64

        L.rw_inject_menu_trigger.argtypes = [c_uint64]
        L.rw_inject_menu_trigger.restype = c_bool

        # ------------------------------------------------------------------ #
        # Event polling                                                      #
        # ------------------------------------------------------------------ #
        L.rw_poll_widget_triggered.argtypes = []
        L.rw_poll_widget_triggered.restype = c_uint64

        L.rw_poll_widget_trigger_event.argtypes = [POINTER(c_uint64)]
        L.rw_poll_widget_trigger_event.restype = c_uint

        L.rw_inject_widget_trigger_event.argtypes = [c_uint64, c_uint]
        L.rw_inject_widget_trigger_event.restype = c_bool

        # ------------------------------------------------------------------ #
        # Combo Box                                                          #
        # ------------------------------------------------------------------ #
        L.rw_combo_box_add_item.argtypes = [c_uint64, c_char_p]
        L.rw_combo_box_add_item.restype = c_bool

        L.rw_combo_box_clear_items.argtypes = [c_uint64]
        L.rw_combo_box_clear_items.restype = c_bool

        L.rw_combo_box_set_current_index.argtypes = [c_uint64, c_uint]
        L.rw_combo_box_set_current_index.restype = c_bool

        L.rw_combo_box_current_index.argtypes = [c_uint64]
        L.rw_combo_box_current_index.restype = c_int

        L.rw_combo_box_item_count.argtypes = [c_uint64]
        L.rw_combo_box_item_count.restype = c_uint

        L.rw_combo_box_item_text.argtypes = [c_uint64, c_uint]
        L.rw_combo_box_item_text.restype = c_char_p

        # ------------------------------------------------------------------ #
        # List Box                                                           #
        # ------------------------------------------------------------------ #
        L.rw_list_box_add_item.argtypes = [c_uint64, c_char_p]
        L.rw_list_box_add_item.restype = c_bool

        L.rw_list_box_remove_item.argtypes = [c_uint64, c_uint]
        L.rw_list_box_remove_item.restype = c_bool

        L.rw_list_box_clear_items.argtypes = [c_uint64]
        L.rw_list_box_clear_items.restype = c_bool

        L.rw_list_box_set_current_index.argtypes = [c_uint64, c_uint]
        L.rw_list_box_set_current_index.restype = c_bool

        L.rw_list_box_current_index.argtypes = [c_uint64]
        L.rw_list_box_current_index.restype = c_int

        L.rw_list_box_item_count.argtypes = [c_uint64]
        L.rw_list_box_item_count.restype = c_uint

        L.rw_list_box_item_text.argtypes = [c_uint64, c_uint]
        L.rw_list_box_item_text.restype = c_char_p

        # ------------------------------------------------------------------ #
        # Clipboard & Drag                                                   #
        # ------------------------------------------------------------------ #
        L.rw_set_clipboard_text.argtypes = [c_char_p]
        L.rw_set_clipboard_text.restype = c_bool

        L.rw_get_clipboard_text.argtypes = []
        L.rw_get_clipboard_text.restype = c_char_p

        L.rw_begin_drag.argtypes = [
            c_uint64,  # source widget id
            c_char_p,  # mime_type
            POINTER(c_uint8),  # payload
            c_uint,  # payload_len
        ]
        L.rw_begin_drag.restype = c_bool

        # ------------------------------------------------------------------ #
        # Platform info                                                      #
        # ------------------------------------------------------------------ #
        L.rw_backend_name.argtypes = []
        L.rw_backend_name.restype = c_char_p

        L.rw_platform_capabilities.argtypes = []
        L.rw_platform_capabilities.restype = c_uint

        L.rw_platform_dpi_scale_factor.argtypes = []
        L.rw_platform_dpi_scale_factor.restype = c_float

        L.rw_platform_capability_contract.argtypes = [c_uint]
        L.rw_platform_capability_contract.restype = c_uint

        L.rw_bindings_api_version.argtypes = []
        L.rw_bindings_api_version.restype = c_uint

        # ------------------------------------------------------------------ #
        # Render configuration                                               #
        # ------------------------------------------------------------------ #
        L.rw_set_render_aa_samples_per_axis.argtypes = [c_uint]
        L.rw_set_render_aa_samples_per_axis.restype = c_uint

        L.rw_get_render_aa_samples_per_axis.argtypes = []
        L.rw_get_render_aa_samples_per_axis.restype = c_uint

        L.rw_set_embedded_target_fps.argtypes = [c_uint]
        L.rw_set_embedded_target_fps.restype = c_uint

        L.rw_get_embedded_target_fps.argtypes = []
        L.rw_get_embedded_target_fps.restype = c_uint

        L.rw_submit_embedded_noop_task.argtypes = [c_char_p]
        L.rw_submit_embedded_noop_task.restype = c_uint64

        # ------------------------------------------------------------------ #
        # Embedded engine stats                                              #
        # ------------------------------------------------------------------ #
        L.rw_embedded_engine_is_initialized.argtypes = []
        L.rw_embedded_engine_is_initialized.restype = c_bool

        L.rw_embedded_engine_is_running.argtypes = []
        L.rw_embedded_engine_is_running.restype = c_bool

        L.rw_embedded_engine_frame_count.argtypes = []
        L.rw_embedded_engine_frame_count.restype = c_uint64

        L.rw_embedded_engine_pending_task_count.argtypes = []
        L.rw_embedded_engine_pending_task_count.restype = c_uint64

        L.rw_embedded_engine_window_count.argtypes = []
        L.rw_embedded_engine_window_count.restype = c_uint64

        L.rw_embedded_engine_button_count.argtypes = []
        L.rw_embedded_engine_button_count.restype = c_uint64

        # ------------------------------------------------------------------ #
        # Mobile (only available with "mobile-api" feature)                   #
        # ------------------------------------------------------------------ #
        L.rw_mobile_backend_name.argtypes = []
        L.rw_mobile_backend_name.restype = c_char_p

        L.rw_mobile_attach_native_view.argtypes = [c_uint64]
        L.rw_mobile_attach_native_view.restype = c_bool

        # ------------------------------------------------------------------ #
        # Binding status                                                     #
        # ------------------------------------------------------------------ #
        L.rw_python_binding_status.argtypes = []
        L.rw_python_binding_status.restype = c_uint

        L.rw_cpp_binding_status.argtypes = []
        L.rw_cpp_binding_status.restype = c_uint

        L.rw_java_binding_status.argtypes = []
        L.rw_java_binding_status.restype = c_uint

        L.rw_java_jni_skeleton_version.argtypes = []
        L.rw_java_jni_skeleton_version.restype = c_uint

        L.rw_python_reserved.argtypes = []
        L.rw_python_reserved.restype = c_uint

        L.rw_cpp_reserved.argtypes = []
        L.rw_cpp_reserved.restype = c_uint

        L.rw_java_reserved.argtypes = []
        L.rw_java_reserved.restype = c_uint

        L.rw_nodejs_binding_status.argtypes = []
        L.rw_nodejs_binding_status.restype = c_uint

        # ------------------------------------------------------------------ #
        # Memory                                                             #
        # ------------------------------------------------------------------ #
        L.rw_free_string.argtypes = [c_char_p]
        L.rw_free_string.restype = None

        L.rw_free_rust_string.argtypes = [c_char_p]
        L.rw_free_rust_string.restype = None

        # ------------------------------------------------------------------ #
        # Drop event polling (advanced drag-drop)                              #
        # ------------------------------------------------------------------ #
        L.rw_poll_drop_event.argtypes = [
            POINTER(c_uint64),  # source_out
            POINTER(c_uint64),  # target_out
            POINTER(c_char_p),  # mime_out
            POINTER(c_void_p),  # payload_out
            POINTER(c_uint),  # payload_len_out
        ]
        L.rw_poll_drop_event.restype = c_bool

        # ------------------------------------------------------------------ #
        # Error state                                                         #
        # ------------------------------------------------------------------ #
        L.rw_error_code.argtypes = [c_uint64]
        L.rw_error_code.restype = c_int

        L.rw_error_message.argtypes = [c_uint64]
        L.rw_error_message.restype = c_char_p

        # ------------------------------------------------------------------ #
        # Harmony node bridge (HarmonyOS native bridge)                       #
        # ------------------------------------------------------------------ #
        L.rw_harmony_bind_node.argtypes = [c_uint64, c_uint64]
        L.rw_harmony_bind_node.restype = c_bool

        L.rw_harmony_unbind_node.argtypes = [c_uint64]
        L.rw_harmony_unbind_node.restype = c_bool

        L.rw_harmony_lookup_widget_id.argtypes = [c_uint64]
        L.rw_harmony_lookup_widget_id.restype = c_uint64

        L.rw_harmony_clear_node_bindings.argtypes = []
        L.rw_harmony_clear_node_bindings.restype = None

        L.rw_harmony_on_click.argtypes = [c_uint64]
        L.rw_harmony_on_click.restype = c_bool

        L.rw_harmony_on_menu_item.argtypes = [c_uint64]
        L.rw_harmony_on_menu_item.restype = c_bool

        L.rw_harmony_on_value_changed.argtypes = [c_uint64]
        L.rw_harmony_on_value_changed.restype = c_bool

        L.rw_harmony_on_widget_event.argtypes = [c_uint64, c_uint]
        L.rw_harmony_on_widget_event.restype = c_bool

        L.rw_harmony_on_node_click.argtypes = [c_uint64]
        L.rw_harmony_on_node_click.restype = c_bool

        L.rw_harmony_on_node_menu_item.argtypes = [c_uint64]
        L.rw_harmony_on_node_menu_item.restype = c_bool

        L.rw_harmony_on_node_value_changed.argtypes = [c_uint64]
        L.rw_harmony_on_node_value_changed.restype = c_bool

        L.rw_harmony_on_node_widget_event.argtypes = [c_uint64, c_uint]
        L.rw_harmony_on_node_widget_event.restype = c_bool

    # ------------------------------------------------------------------ #
    # String helpers                                                     #
    # ------------------------------------------------------------------ #
